Add general com zoom countries

--- a/_includes/countries_portfolio.html
+++ b/_includes/countries_portfolio.html
@@ -13,7 +13,7 @@
             little deeper into these countries and see what defines their identity within the WikiWorld. In other 
             words, how can we describe the WikiCountries ?<br>
             To do so, one can derive a semantic distance 
-            (introduced <a href="http://infolab.stanford.edu/~west1/pubs/West-Pineau-Precup_IJCAI-09.pdf">here</a> 
+            (introduced <a href="http://infolab.stanford.edu/~west1/pubs/West-Pineau-Precup_IJCAI-09.pdf">here</a>) 
             that would represent how close two concepts are in terms of meaning. So let's see which to words users 
             think when they look for the most central countries in the game.<br>
             Click on the flags of the countries to have a look at the associated concepts ! The larger the words, 
@@ -41,5 +41,16 @@
             </div>
         {% endfor %}
         </div>
+
+        <div class="row text-justify">
+            If you have looked carefully at the words associated with the different countries you may have made 
+            some observations. If almost all the words associated with the countries can be rationally explained, 
+            do you really think that they transcribe the vision you have of these countries? For most of them, you 
+            probably would not have picked the same words. In fact, maybe you did not even know why some words were 
+            associated with some countries. So does Wikipedia really capture the identity of the countries? Or do 
+            you simply have a false perception of countries?
+        </div>
+
+
     </div>
 </section>
