--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -3,10 +3,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading" id="people">The 100 most important people</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading" id="people">People</h2>
+                    <h3 class="section-subheading text-muted">Who are the 100 most important people according to Wiki users ?
+                    </h3>
                 </div>
             </div>
+
+            <div class="row text-justify">
+                Now that the countries of Wikiworld are established, who will be living in this world ? It is time 
+                to populate WikiWorld! Here, we selected the 100 most important people according to Wiki users as a 
+                sampling representation of the proud inhabitants of WikiWorld.
+                <br><br>
+                What are their occupations, ages, genders ? We collected information on these 100 people in order 
+                to give you an overview of the population of WikiWorld. You can also take a sneak peak into the 
+                three most famous WikiPeople according to Wiki users !
+            </div>
+
+            <br><br>
+
             <div class="row">
             {% for post in site.categories.people %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
