Team text and email

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -31,7 +31,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">This website and datastory were carried out within the framework of 
+                        the EPFL course Applied data analysis, given by Prof. Robert West. We would like to thank 
+                        him, as well as all his teaching assistants, and in particular  Akhil Arora, for their help 
+                        and supervision during this project and course.
+                    </p>
                 </div>
             </div>
         </div>
