--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -39,5 +39,35 @@
                 </div>
             {% endfor %}
             </div>
+            <br><br>
+            <div class="row text-justify">
+                Let’s take a step back from Wikiworld and have a critical look at the results we just obtained. If 
+                the geopolitical organization of the Wikiworld seems to transcribe the true geopolitical 
+                organization of our real world, it is far from being the case for its inhabitants. There is a clear 
+                lack of parity and diversity in general. If one compares with the 
+                <a href="https://en.wikipedia.org/wiki/World_population">World population</a>, one for example 
+                observes that the most represented countries and continents in terms of inhabitants in WikiWorld 
+                (i.e. Europa, the United States and United Kingdom) are far from being the most populated ones in 
+                the real world. On the other hand, China or India, the two largest countries in terms of 
+                population, are not represented. Similar comments can be made on the other characteristics we 
+                observed: in our real world, parity is achieved, the population is rather young, English is not 
+                the native language of the majority, and the occupations are more diverse. All these observations 
+                lead to the same conclusion: the 100 most famous people on Wikipedia, who were taken as 
+                representatives of our WikiWorld, are far from being a reliable representation of the world 
+                population. 
+                <br><br>
+                If such an observation could have been inferred, as the nationality and language of the most 
+                famous people are for instance highly biased by the fact that we are working on the english version 
+                of Wikipedia, this lack of diversity is still questionable. What does it say about our current 
+                society? Why are the most famous people not in the image of the true population of the world? Maybe 
+                this is why they are famous, because they are out of the norm… Or maybe there exists some kind of 
+                bias too. Either way, this raises the question of the influence that can have this lack of diversity 
+                in the most famous people on the population that sees them as role models. This debate is outside 
+                the scope of this datastory, but underlines the importance of such results and data.
+
+            </div>
+
+
+
         </div>
     </section>
