--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -8,6 +8,12 @@
             </div>
             <div class="row text-justify">
                 Blablabla
+                <br><br>
+                Thank you very much for reading our datastory! We hope you enjoyed it as much as we enjoyed 
+                creating the WikiWorld. If you are interested or curious about the programming pipeline that led 
+                us here, you are very welcome to take a look at our 
+                <a href="https://github.com/epfl-ada/ada-2022-project-flagada22">Github repository</a>.
+
 
             </div>
         </div>
