--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -7,7 +7,43 @@
                 </div>
             </div>
             <div class="row text-justify">
-                Blablabla
+                By enabling us to observe cognitive and semantic links between the player’s notions of two 
+                concepts, the Wikispeedia dataset allows us to construct a representation of Wikispeedia users’ 
+                reality. The latter, called the WikiWorld in this datastory, exhibits both striking similarities 
+                and fundamental differences with our real world. As far as the countries and global geopolitical 
+                organization are concerned, their portrayal is somewhat accurate and faithful to the real 
+                geopolitical organization of the world. The most influential countries are also the most central 
+                in the Wikispeedia graph, and one can clearly extract from the Wikispeedia’s users’ games useful 
+                insights into our real world. But this is in fact the only aspect faithfully transcribed by the 
+                representation of the Wikispeedia users’ reality we constructed. Indeed, the images of the 
+                countries given by their semantically-close concepts are quite surprising and do not always gather 
+                the most important information on these countries. Similarly, if we consider the different people 
+                that are described in the Wikipedia subset we used (and in particular the 100 most famous ones), 
+                the observations are quite different from the real world population. From their nationality to 
+                their age, gender or religion, there is an obvious lack of diversity, and the people that are 
+                described in Wikipedia are far from conveying a correct representation of the diversity of our 
+                current world.
+                <br><br>
+                These differences raise many questions: What can this wrong (or at least not faithful) 
+                representation of the world tell us about our current society? Since Wikipedia is nowadays the 
+                world’s largest and most-read reference work in history, what consequences can this incorrect 
+                transcription have on the real world?  If our current world is supposed to shape Wikipedia, doesn't 
+                a world falsely described in Wikipedia also have an influence on the development of our real world? 
+                Let’s illustrate with an example. The young generations often use Wikipedia as a way to learn and 
+                develop their knowledge of the world, when in school. But if the Wikipedia articles don’t represent 
+                parity, and if famous women of history are too often forgotten, the younger generation might grow 
+                up also unaware of these genius women. For example, 
+                <a href="https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a> is the pioneer of computer 
+                science and yet too many university students in STEM don’t even know her name… 
+                <br><br>
+                Thus, it is fundamental that Wikipedia keeps growing toward improving knowledge about the 
+                diversity of our world, population and history, and educates the youngest generations in this 
+                direction (and also the older ones ;)).
+                <br><br>
+                As a last word, one should always keep in mind that the analyzed data come from the English 
+                Wikipedia pages, hence a bias in our results plays a role in the lack of diversity we observe 
+                without a doubt. It would thus be necessary to perform the same analysis with Wikipedia pages in 
+                other languages to confirm or refute the results we have.
                 <br><br>
                 Thank you very much for reading our datastory! We hope you enjoyed it as much as we enjoyed 
                 creating the WikiWorld. If you are interested or curious about the programming pipeline that led 
