--- a/_includes/countries_portfolio.html
+++ b/_includes/countries_portfolio.html
@@ -14,11 +14,11 @@
             words, how can we describe the WikiCountries ?<br>
             To do so, one can derive a semantic distance 
             (introduced <a href="http://infolab.stanford.edu/~west1/pubs/West-Pineau-Precup_IJCAI-09.pdf">here</a>) 
-            that would represent how close two concepts are in terms of meaning. So let's see which to words users 
+            that would represent how close two concepts are in terms of meaning. So let's see to which words users 
             think when they look for the most central countries in the game.<br>
             Click on the flags of the countries to have a look at the associated concepts ! The larger the words, 
             the more related they are to the corresponding country. Play around the Wikipedia articles to find a 
-            relation between the words and their country!
+            relation between the words and their country !
         </div>
 
         <br><br>
