--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -10,12 +10,12 @@
             </div>
 
             <div class="row text-justify">
-                Now that the countries of Wikiworld are established, who will be living in this world ? It is time 
-                to populate WikiWorld! Here, we selected the 100 most important people according to Wiki users as a 
-                sampling representation of the proud inhabitants of WikiWorld.
+                Now that the countries of WikiWorld are established, who will be living in this world ? It is time 
+                to populate the WikiWorld ! Here, we selected the 100 most important people according to Wiki users as a 
+                sampling representation of the proud inhabitants of the WikiWorld.
                 <br><br>
                 What are their occupations, ages, genders ? We collected information on these 100 people in order 
-                to give you an overview of the population of WikiWorld. You can also take a sneak peak into the 
+                to give you an overview of the population of the WikiWorld. You can also take a sneak peak into the 
                 three most famous WikiPeople according to Wiki users !
             </div>
 
